[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/LeftTriangle.bmp" type="Texture" id=1]
[ext_resource path="res://Assets/Images/RightTriangle.bmp" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[node name="OptionsMenu" type="ColorRect"]
margin_left = 480.0
margin_top = 32.0
margin_right = 864.0
margin_bottom = 440.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="."]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_top = 103.0
margin_right = 384.0
margin_bottom = 199.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -120.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Sound Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="Main"]
margin_left = 32.0
margin_top = 49.0
margin_right = 264.0
margin_bottom = 65.0
min_value = -24.0
max_value = 0.0
rounded = true
allow_greater = true
allow_lesser = true
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="Main"]
margin_left = 272.0
margin_top = 33.0
margin_right = 354.0
margin_bottom = 77.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Control" parent="."]
margin_top = 179.0
margin_right = 384.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -120.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="Music"]
margin_left = 32.0
margin_top = 49.0
margin_right = 264.0
margin_bottom = 65.0
min_value = -24.0
max_value = 0.0
rounded = true
allow_greater = true
allow_lesser = true
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="Music"]
margin_left = 272.0
margin_top = 33.0
margin_right = 354.0
margin_bottom = 77.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC" type="Control" parent="."]
visible = false
margin_top = 177.0
margin_right = 384.0
margin_bottom = 273.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumNPC" type="Label" parent="NPC"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Number of AI:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumNPCAmount" type="Label" parent="NPC"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCIncrease" type="Button" parent="NPC"]
margin_left = 212.0
margin_top = 33.0
margin_right = 252.0
margin_bottom = 65.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCDecrease" type="Button" parent="NPC"]
margin_left = 135.0
margin_top = 33.0
margin_right = 175.0
margin_bottom = 65.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 264.0
margin_right = 352.0
margin_bottom = 374.0
custom_constants/vseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="Buttons"]
margin_right = 320.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="Buttons"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Main/Slider" to="." method="_update_main_sound_values"]
[connection signal="text_entered" from="Main/Level" to="." method="_update_main_sound_values"]
[connection signal="value_changed" from="Music/Slider" to="." method="_update_music_sound_values"]
[connection signal="text_entered" from="Music/Level" to="." method="_update_music_sound_values"]
[connection signal="pressed" from="NPC/NPCIncrease" to="." method="_increase_NPC_amount"]
[connection signal="pressed" from="NPC/NPCDecrease" to="." method="_decrease_NPC_amount"]
[connection signal="pressed" from="Buttons/ApplyButton" to="." method="_apply_settings"]
